<resources>
    <string name="type">使用下划线命名法:模块名+逻辑名称</string>

    <!--APP-->
    <string name="app_name">ABD2WD</string>

    <!--activity_main-->
    <string name="main_connected">当前连接方式：已连接</string>
    <string name="main_unconnected">当前连接方式：未连接</string>
    <string name="main_speed_1">当前速度：1档</string>
    <string name="main_speed_2">当前速度：2档</string>
    <string name="main_speed_3">当前速度：3档</string>
    <string name="main_school_name">沧州第一中学</string>
    <string name="main_url">学校主页：http://hbczyizhong.cn</string>
    <string name="main_gravity_sensor">重力感应</string>
    <string name="main_connect">连接</string>
    <string name="main_forward">前进</string>
    <string name="main_back">后退</string>
    <string name="main_turn_letf">左转</string>
    <string name="main_turn_right">右转</string>
    <string name="main_stop">停止</string>
    <string name="main_left">左</string>
    <string name="main_center">中</string>
    <string name="main_right">右</string>
    <string name="main_left_rotate">左旋</string>
    <string name="main_right_rotate">右旋</string>
    <string name="main_outfire">灭火</string>
    <string name="main_whistle">鸣笛</string>
    <string name="main_accelerate">加速</string>
    <string name="main_moderate">减速</string>

    <string name="main_autopilotmode">自动驾驶模式</string>
    <string name="main_trackingmode">循迹模式</string>
    <string name="main_exitmode">模式退出</string>

    <string name="main_tiao">跳转</string>
    <string name="main_type">模式</string>
    <string name="main_setting">设置</string>

    <!--
<string name="current_time">当前日期：%1$d年%2$d月%3$d日</string>
tvDate.setText(String.format(getResources().getString(R.string.current_time),year,month,day));
-->



    <!-- ijk -->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="rtp_speed">rtp_speed</string>
    <string name="rtp_byte_count">rtp_byte_count</string>
    <string name="connected_time">connected_time</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

</resources>
