<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:background="@android:color/background_light">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ConnectState"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_unconnected" />

                <TextView
                    android:id="@+id/tv_CurrentSpeed"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/main_speed_1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chk_GravitySensor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_gravity_sensor" />

                <Button
                    android:id="@+id/btn_Connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_connect" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_icon_foreground" />

                <TextView
                    android:id="@+id/tv_SchoolName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_school_name"
                    android:textColor="#ff000000"
                    android:textSize="16.0dip" />

                <TextView
                    android:id="@+id/tv_URL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_url"
                    android:textColor="#ff000000"
                    android:textSize="16.0dip" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Mykey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="50px"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_Forward"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_forward" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_TurnLeft"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:text="@string/main_turn_letf" />

                    <Button
                        android:id="@+id/btn_Stop"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_stop" />

                    <Button
                        android:id="@+id/btn_TurnRight"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:text="@string/main_turn_right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_Back"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_back" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50px"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_Left"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:text="@string/main_left" />

                    <Button
                        android:id="@+id/btn_Center"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_center" />

                    <Button
                        android:id="@+id/btn_Right"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:text="@string/main_right" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="50px"
                android:layout_marginBottom="50px"
                android:layout_toRightOf="@id/Mykey"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_LeftRotate"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_left_rotate" />

                    <Button
                        android:id="@+id/btn_Outfire"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_outfire" />

                    <Button
                        android:id="@+id/btn_Accelerate"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_accelerate" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_RightRotate"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_right_rotate" />

                    <Button
                        android:id="@+id/btn_Whistle"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_whistle" />

                    <Button
                        android:id="@+id/btn_Moderate"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_moderate" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"

                >

                <Button
                    android:id="@+id/btn_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_setting" />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>